--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@ body {
     margin: 0;
     padding-bottom: 30px;
     overflow-x: hidden;
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
 a{
     text-decoration: none;
@@ -36,14 +37,17 @@ span{
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 70%;
     backdrop-filter: blur(10px);
+    flex-wrap: wrap;
 }
 .search{
     display: flex;
     justify-content: center;
-    gap: 5%;
-}
+    gap: 5%; }
 .erresult{
     color: red;
+}
+.search i{
+    font-size: 19px;
 }
 @keyframes move {
     0%{
@@ -58,16 +62,24 @@ span{
 }
 h1 {
     text-align: center;
+    letter-spacing: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+h1 i{
+    font-size: 25px;
 }
 i{
-    color: #45a049;
+    color: #fff;
 }
 input {
     width: 70%;
     padding: 10px; 
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    outline: 2px solid #45a049;
+    border-radius: 10px;
+    border: 2px solid #45a049;
+    outline: none;
 }
 
 button {
@@ -78,6 +90,7 @@ button {
     color: white;
     border: none;
     cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 button:hover {
@@ -94,4 +107,30 @@ button:hover {
     .container{
         width: 75%;
     }
+    .container h1{
+        font-size: 16px;
+    }
+}
+body.dark-mode {
+    background-color: #121212;
+    color: white;
+}
+
+body.dark-mode button {
+    background-color: #fff;
+    color: #4CAF50;
+}
+body.dark-mode button i{
+    color: #ffc917;
+}
+body.dark-mode button:hover {
+    background-color: #fff;
+
+}
+body.dark-mode i, body.dark-mode span{
+    color: #ffc917;
+}
+body.dark-mode input{
+    border: 1px solid #ffc917;
+    outline: 2px solid #ffc917;
 }
