--- a/assets/style.css
+++ b/assets/style.css
@@ -66,7 +66,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: ;
 }
 h1 i{
     font-size: 25px;
