--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@ body {
     background: linear-gradient(45deg, rgba(0, 0, 255, 0.616), rgba(0, 204, 187, 0.651));
     display: flex;
     justify-content: center;
+    flex-direction column;
     align-items: center;
     min-height: 100vh;
     margin: 0;
